# context-mesh-hub

./: .gitignore  AGENTS.md  README.md  REFACTORING_PLAN.md  install.sh  pyproject.toml
context/: .context-mesh-framework.md
context-mesh-1.1.0/: .gitignore  ADVANCED.md  CHANGELOG.md  COMPARISON.md  CONTRIBUTING.md  EXAMPLES.md  FAQ.md  FRAMEWORK.md  GETTING_STARTED.md  GLOSSARY.md  INTEGRATION.md  LICENSE  PRINCIPLES.md  README.md  RELEASE_v1.1.0.md  TOOLS.md
context-mesh-1.1.0/.github/: pull_request_template.md
context/agents/: agent-learn-sync.md  (+3 more)
hub-cli/: .gitignore  README.md  package.json  pyproject.toml
hub-cli/src/: index.ts
hub-cli/src/commands/: doctor.ts  init.ts  start.ts  status.ts  stop.ts  ui.ts
hub-cli/src/hub_cli/: __init__.py  __main__.py  agents.py  config.py  llm_client.py  main.py  mcp_client.py  ui.py
hub-cli/src/hub_cli/commands/: __init__.py  build.py  intent.py  learn.py  skills.py
hub-cli/src/hub_cli/templates/commands/: cm-add-feature.md  cm-build-plan.md  cm-build.md  cm-intent.md  cm-learn.md  cm-new-project.md  cm-status.md  cm-sync-learn.md
hub-cli/src/hub_cli/templates/skills/context-mesh/: SKILL.md
hub-cli/src/hub_cli/templates/skills/context-mesh/references/: brownfield-guide.md  nomenclature-guide.md  parallelization-guide.md
hub-cli/src/utils/: process.ts  repo.ts
hub-core/: README.md  fastmcp.json  pyproject.toml
hub-core/.context-mesh/: proposal_ed8afea3-4901-4041-a79a-108d2e764259.json  proposal_f32bed93-32f6-41cf-9bb2-bae01f3299e4.json
hub-core/prompt-packs/context-mesh-core/1.0.0/: add-decision.md  add-feature.md  create-agent.md  existing-project.md  fix-bug.md  learn-update.md  new-project.md  update-feature.md
hub-core/prompt-packs/context-mesh-core/1.2.0/: VERSION.md  add-decision.md  checkpoint.md  clarify.md  create-agent.md  existing-project.md  fix-bug.md  learn-update.md  retrospective.md
hub-core/src/hub_core/: __init__.py  brownfield.py  build_protocol.py  bundler.py  enhanced_validator.py  learn_sync.py  loader.py  prompt_pack_manager.py  prompt_resolver.py  server.py  tools.py  validator.py
hub-core/src/hub_core/domain/: __init__.py
hub-core/src/hub_core/domain/models/: __init__.py  analysis.py  build.py  learn.py
hub-core/src/hub_core/domain/services/: __init__.py  analysis_service.py  build_service.py  intent_service.py  learn_service.py
hub-core/src/hub_core/domain/validation/: __init__.py  artifact_validators.py  cross_reference_validator.py  naming_validator.py  validation_result.py
hub-core/src/hub_core/infrastructure/: __init__.py
hub-core/src/hub_core/infrastructure/parsers/: __init__.py  extractor.py  markdown_parser.py
hub-core/src/hub_core/infrastructure/persistence/: __init__.py  file_store.py  plan_repository.py  proposal_repository.py
hub-core/src/hub_core/infrastructure/scanner/: __init__.py  context_extractor.py  repo_scanner.py  slice_generator.py
hub-core/src/hub_core/mcp/: __init__.py  decorators.py
hub-core/src/hub_core/mcp/tools/: __init__.py  cm_agent.py  cm_analyze.py  cm_build.py  cm_help.py  cm_init.py  cm_intent.py  cm_learn.py  cm_status.py  cm_validate.py
hub-core/src/hub_core/shared/: __init__.py  config.py  errors.py  utils.py
hub-core/tests/: conftest.py  test_analysis_service.py  test_build_service.py  test_infrastructure.py  test_intent_service.py  test_learn_sync.py  test_loader.py  test_mcp_tools.py  test_validation.py
hub-ui/: README.md  next.config.js  package-lock.json  package.json
(+123 files in other folders)
