[project]
name = "context-mesh-hub-cli"
version = "0.1.0"
description = "Context Mesh Hub - Framework that standardizes Context Engineering processes"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Jeftar Mascarenhas" }
]
requires-python = ">=3.12"
keywords = ["context-mesh", "mcp", "ai", "llm", "context-engineering", "cursor", "copilot", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "fastmcp>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
cm = "hub_cli.main:app"
context-mesh = "hub_cli.main:app"

[project.urls]
Homepage = "https://github.com/jeftarmascarenhas/context-mesh"
Documentation = "https://github.com/jeftarmascarenhas/context-mesh"
Repository = "https://github.com/jeftarmascarenhas/context-mesh-hub"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hub_cli"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
